Trying to fix mobile overflow

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -21,3 +21,7 @@ a {
 article {
   margin: 16px;
 }
+
+.page-content {
+  overflow-x: hidden;
+}
